--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+druid (0.9.0-2~jessie1) jessie-wikimedia; urgency=low
+
+  * Fix middleManager -> middlemanager for config directory and log files
+
+ -- Andrew Otto (WMF) <otto@wikimedia.org>  Fri, 27 May 2016 13:40:26 +0000
+
 druid (0.9.0-1) jessie-wikimedia; urgency=low
 
   * Initial debianization
