--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+druid (0.11.0-3) jessie-wikimedia; urgency=low
+
+  * Drop mysql-metadata-storage-0.10.0.jar from debian/extensions.
+
+ -- Luca Toscano (WMF) <ltoscano@wikimedia.org>  Tue, 22 May 2018 14:35:00 +0000
+
 druid (0.11.0-2) jessie-wikimedia; urgency=low
 
   * Add the druid-parquet-extensions (community) version 0.10
