--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+druid (0.12.3-1.1) UNRELEASED; urgency=medium
+
+  * Switch to /srv/druid (T245810)
+
+ -- Moritz Muehlenhoff <jmm@debian.org>  Tue, 25 Feb 2020 18:06:17 +0100
+
 druid (0.12.3-1) stretch-wikimedia; urgency=low
 
   * Upstream release 0.12.3
